# adtlib-cc

./: CMakeLists.txt  adt_formatters.py  adtlib.cmake  cmake.sh
JSONTests/: t1.json  t3.json  t5.json
include/adt/: Arena.hh  ArenaList.hh  ArgvParser.hh  Array.hh  BufferAllocator.hh  FlatArena.hh  FreeList.hh  FuncBuffer.hh  Gpa.hh  Heap.hh  IAllocator.hh  IException.hh  ILogger.hh  IThreadPool.hh  List.hh  Logger-inl.hh  Logger.hh  Map.hh  MiMalloc.hh  Opt.hh  Pair.hh  Pipeline.hh  PoolAllocator.hh  Queue.hh  QueueMPMC.hh  RBTree.hh  RefCount.hh  Rope.hh  SList.hh  SOA.hh  Set.hh  SplayTree.hh  StdAllocator.hh  String-inl.hh  String.hh  String.inc  Thread.hh  ThreadPool.hh  Timer.hh  Vec.hh  (+15 more)
modulesInclude/: CMakeLists.txt  IAllocator.cppm  IException.cppm  Pair.cppm  Span.cppm  SpanImpl.cppm  StdAllocator.cppm  String.cppm  StringImpl.cppm  Thread.cppm  Vec.cppm  adt.cppm  assert.cppm  enum.hh  hash.cppm  macro.hh  print.cppm  printImpl.cppm  sort.cppm  types.cppm  utils.cppm
modulesTests/: CMakeLists.txt  Vec.cc
src/: Arena2.cc  Arena2.hh  ArenaList.cc  ArgvParser.cc  ArrTest.cc  AssertTest.cc  BinarySearch.cc  CMakeLists.txt  CmdArgs.cc  CmdArgs.hh  Context.cc  FuncBuffer.cc  HeapTest.cc  JSONTest.cc  ListTest.cc  Logger.cc  LoggerUser.cc  LoggerUser.hh  MapTest.cc  PPGenerator.cc  ParallelFor.cc  PieceList.cc  PieceList.hh  Pipeline.cc  PmrAllocator.cc  PoolTest.cc  Print2.cc  QueueMPMC.cc  QueueSPSCTest.cc  QueueTest.cc  RBTreeTest.cc  Raii.cc  RefCount.cc  Rope.cc  Rope.hh  Runtime.cc  SList.cc  SOA3.cc  SOATest.cc  SOATest2.cc  (+22 more)
src/WIP/: Context.hh  PieceList.hh  QueueMPMC.hh  Rope.hh  Runtime.hh  SplayTree.hh  String2.hh  math-inl.hh  math.hh  math2-inl.hh  math2.hh  print2-inl.hh  print2.hh  simd.hh
src/adt/: AVL.hh  AVLTree.hh  Allocator.hh  AllocatorPool.hh  Arena.hh  Arena2.hh  ArenaAllocator.hh  Arr.hh  Array.hh  AtomicArena.hh  Buddy.hh  BufferAllocator.hh  ChunkAllocator.hh  DefaultAllocator.hh  Directory.hh  FixedAllocator.hh  FreeList.hh  GenericAllocator.hh  HashMap.hh  Heap.hh  IAllocator.hh  List.hh  Map.hh  MemPool.hh  MiMalloc.hh  MutexArena.hh  Opt.hh  OsAllocator.hh  Pair.hh  Pool.hh  PoolSOA.hh  Queue.hh  QueueArray.hh  RB.hh  RBTree.hh  Result.hh  SList.hh  ScratchBuffer.hh  Set.hh  Span.hh  (+32 more)
src/json/: Lexer.cc  Lexer.hh  Parser.cc  Parser.hh  ast.hh
src/modules/: IAllocator.ixx  IException.ixx  Malloc.ixx  Span.ixx  String.ixx  Vec.ixx  hash.ixx  print.ixx  types.hh  utils.ixx
src/rdt/: Allocator.hh  Pair.hh  Vec.hh  types.hh
