add_library(adtlib)
target_sources(adtlib PUBLIC FILE_SET CXX_MODULES FILES
    types.cppm
    adt.cppm
    Vec.cppm
    sort.cppm
    utils.cppm
    String.cppm
    StringImpl.cppm
    print.cppm
    StdAllocator.cppm
    IException.cppm
    assert.cppm
    IAllocator.cppm
    Thread.cppm
    Span.cppm
    Pair.cppm
    hash.cppm
)
