add_executable(
    adt-alloc
    allocTest.cc
)

add_executable(
    adt-print
    printTest.cc
)

add_executable(
    adt-vec
    VecTest.cc
)

add_executable(
    adt-heap
    HeapTest.cc
)

add_executable(
    adt-string
    StringTest.cc
)

add_executable(
    adt-pool
    PoolTest.cc
)

add_executable(
    adt-map
    MapTest.cc
)

add_executable(
    adt-threadpool
    ThreadPoolTest.cc
)

add_executable(
    adt-queue
    QueueTest.cc
)

add_executable(
    adt-list
    ListTest.cc
)

add_executable(
    adt-rbtree
    RBTreeTest.cc
)

add_executable(
    adt-arr
    ArrTest.cc
)

add_executable(
    adt-json
    JSONTest.cc
    json/Parser.cc
    json/Lexer.cc
)

add_executable(
    adt-assert
    AssertTest.cc
)

add_executable(
    adt-threads
    threadsTest.cc
)

add_executable(
    adt-soa
    SOATest.cc
)

add_executable(
    adt-soa2
    SOATest2.cc
)

add_executable(
    QueueSPSC
    QueueSPSCTest.cc
)

add_executable(
    BinarySearch
    BinarySearch.cc
)

add_executable(
    SList
    SList.cc
)

add_executable(
    StringFixed
    StringFixed.cc
)

add_executable(
    Set
    Set.cc
)

add_executable(
    SOA3
    SOA3.cc
)
